# microtube

./: .gitignore  .gitmodules  CMakeLists.txt  MicroTube_YouTube_manual.html  README.md  com.verdanditeam.microtube.service  microtube-url.desktop  microtube.desktop  microtube.pro
js/: basicVideoInfo.js  channelInfo.js  channelVideos.js  commentReplies.js  comments.js  fetchPOToken.js  package-lock.json  package.json  search.js  subscriptionsAggregator.js  trending.js  unified.js  videoInfo.js
qml/: microtube.qml
qml/cover/: CoverPage.qml
qml/pages/: About.qml  Channel.qml  Comments.qml  Diagnostics.qml  Filters.qml  InstallDialog.qml  Main.qml  Replies.qml  Settings.qml  SponsorBlockSettings.qml  Subscriptions.qml  SubscriptionsImport.qml  SubscriptionsSettings.qml  UpdateDialog.qml  VideoPlayer.qml
qml/pages/components/: APIKeyDialog.qml  CategoryElement.qml  CenteredLabel.qml  Comment.qml  CommentsButton.qml  Jupii.qml  SharePage.qml  SilicaFastListView.qml  SubtitlesDialog.qml  VideoElement.qml  helpers.js
qml/pages/components/private/: HighlightImage.qml
qml/resources/: resources.qrc
rpm/: microtube.spec
src/: aggregatevideosource.cpp  aggregatevideosource.h  categoriesmodel.cpp  categoriesmodel.h  channelaggregator.cpp  channelaggregator.h  channelmodel.cpp  channelmodel.h  comment.cpp  comment.h  commentsmodel.cpp  commentsmodel.h  constants.cpp  constants.h  database.cpp  database.h  datautils.cpp  datautils.h  downloader.cpp  downloader.h  httputils.cpp  httputils.h  iconutils.cpp  iconutils.h  jsfunctions.cpp  jsfunctions.h  mainwindow.cpp  mainwindow.h  mediaview.h  microtube.cpp  paginatedvideosource.cpp  paginatedvideosource.h  playlistmodel.cpp  playlistmodel.h  searchmodel.cpp  searchmodel.h  searchparams.cpp  searchparams.h  sponsorblock.cpp  sponsorblock.h  (+37 more)
src/QEasyDownloader/: CMakeLists.txt  QEasyDownloader  QEasyDownloader.pro  README.md  install.py
src/QEasyDownloader/docs/: AddingQEasyDownloader.md  ClassQEasyDownloader.md  Installation.md  QEasyDownloaderErrorCodes.md  UsingDownloader.md
src/QEasyDownloader/examples/: examples.pro
src/QEasyDownloader/examples/simple_download/: main.cpp  simple_download.pro
src/QEasyDownloader/examples/simple_download_iterator/: main.cpp  simple_download_iterator.pro
src/QEasyDownloader/include/: QEasyDownloader.hpp
src/QEasyDownloader/src/: QEasyDownloader.cc
src/QEasyDownloader/website/: sidebars.json  siteConfig.js
src/QEasyDownloader/website/blog/: 2017-12-27-publishing-official-documentation.md
src/QEasyDownloader/website/core/: Footer.js
src/QEasyDownloader/website/i18n/: en.json
src/QEasyDownloader/website/pages/en/: help.js  index.js  users.js
src/converters/: xmltosrtconverter.cpp  xmltosrtconverter.h
src/entities/: author.h  avatar.h  caption.h  comment.h  playlist.h  search.h  thumbnail.h  trendingsearch.h  video.h  videodefinition.h
src/factories/: authorfactory.cpp  authorfactory.h  avatarfactory.cpp  avatarfactory.h  captionfactory.cpp  captionfactory.h  commentfactory.cpp  commentfactory.h  playlistfactory.cpp  playlistfactory.h  thumbnailfactory.cpp  thumbnailfactory.h  videofactory.cpp  videofactory.h
src/helpers/: channelhelper.cpp  channelhelper.h  googleoauthhelper.cpp  googleoauthhelper.h  jsonhelper.h  jsprocesshelper.cpp  jsprocesshelper.h  quickviewhelper.h  subscriptionshelper.cpp  subscriptionshelper.h  userfileshelper.cpp  userfileshelper.h  videohelper.cpp  videohelper.h
src/managers/: jsprocessmanager.cpp  jsprocessmanager.h
src/mock/: mainwindow.cpp  mainwindow.h  qrandomgenerator.cpp  qrandomgenerator.h
src/models/: categoriesmodel.cpp  categoriesmodel.h  commentsmodel.cpp  commentsmodel.h  playlistmodel.cpp  playlistmodel.h  subscriptionsmodel.cpp  subscriptionsmodel.h
src/nemo-qml-plugin-configuration/: configuration.pri
src/nemo-qml-plugin-configuration/src/: configurationgroup.cpp  configurationgroup.h  configurationvalue.cpp  configurationvalue.h
src/parsers/: channelparser.cpp  channelparser.h  videosparser.cpp  videosparser.h
src/player/: player.cpp  player.h  qmlsubtitlesrenderer.cpp  qmlsubtitlesrenderer.h  renderer.cpp  renderer.h  renderergl.cpp  renderergl.h  renderernemo.cpp  renderernemo.h
src/repositories/: authorrepository.cpp  authorrepository.h  baserepository.h  videorepository.cpp  videorepository.h
src/services/: invidious.cpp  invidious.h  jsdiagnostics.cpp  jsdiagnostics.h  subscriptionsaggregator.cpp  subscriptionsaggregator.h  videodownloader.cpp  videodownloader.h
src/workers/: jsdiagnosticsworker.cpp  jsdiagnosticsworker.h  subscriptionsaggregatorworker.cpp  subscriptionsaggregatorworker.h  subscriptionsimportworker.cpp  subscriptionsimportworker.h
translations/: microtube-cs.ts  microtube-de.ts  microtube-es.ts  microtube-hu.ts  microtube-it.ts  microtube-nl.ts  microtube-pl.ts  microtube-sv.ts  microtube-zh_CN.ts  microtube.ts  new-microtube-de.ts  new-microtube-es.ts  new-microtube.ts
